<resources>
    <string name="app_name">Homework5_Leacture7</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="by_signing_">By signing up, you agree to Photo\'s Terms of Service and \nPrivacy Policy.</string>
    <string name="username">Username</string>
    <string name="sighn_up">SIGHN UP</string>
</resources>