<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivityUserName"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backBtn"
        android:layout_width="12.21dp"
        android:layout_height="11.35dp"
        android:background="@drawable/back"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:layout_marginTop="104dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/register"
        android:text="@string/register"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/edtTxtRegUsrnm"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="16dp"
        android:id="@+id/btnSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sighn_up"
        android:background="@drawable/registerbtn"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_signing_"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


</LinearLayout>